fix: change a link target

--- a/portpolio.html
+++ b/portpolio.html
@@ -13,7 +13,7 @@
     <div id="head">
       <div id="title">hokim</div>
       <div id="title-link">
-        <a class="link-item" href="./main.html">소개</a>
+        <a class="link-item" href="./index.html">소개</a>
 
         <a class="link-item selected" href="./portpolio.html">포트폴리오</a>
       </div>
