feat: portfolio 페이지 3 완료

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
     />
     <link rel="stylesheet" href="./main.css" />
-    <title>Document</title>
+    <title>hokim's resume</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.9/fullpage.min.js"></script>
     <link
       rel="stylesheet"
@@ -21,33 +21,17 @@
       <div id="title">hokim</div>
       <div id="title-link">
         <a class="link-item selected" href="./main.html">소개</a>
-
-        <a class="link-item" href="./portpolio.html">포트폴리오</a>
+        <a class="link-item" href="./portfolio.html">포트폴리오</a>
+        <a class="link-item" href="./career.html">경력</a>
       </div>
     </div>
-    <h1 style="display: none">to2.kr/buQ</h1>
+    <ul id="menu"></ul>
 
-    <ul id="menu">
-      <li data-menuanchor="anchor1"><a href="#anchor1">o</a></li>
-      <li data-menuanchor="anchor2"><a href="#anchor2">o</a></li>
-      <li data-menuanchor="anchor3"><a href="#anchor3">o</a></li>
-      <li data-menuanchor="anchor4"><a href="#anchor4">o</a></li>
-    </ul>
-
-    <div id="fullpage">
-      <div class="section page-1">
-        <div class="inner-pull">안녕하세요</div>
-      </div>
-      <div class="section page-2">
-        <div class="inner-pull">감사해요</div>
-      </div>
-      <div class="section page-1">
-        <div class="inner-pull">잘있어요</div>
-      </div>
-      <div class="section page-2">
-        <div class="inner-pull">다시만나요</div>
-      </div>
-    </div>
+    <div id="fullpage"></div>
   </body>
+  <script src="./mainPages/page_1.js"></script>
+  <script src="./mainPages/page_2.js"></script>
+  <script src="./mainPages/page_3.js"></script>
+  <script src="./mainPages/page_4.js"></script>
   <script src="./main.js"></script>
 </html>
