feat: 1st complete

--- a/projects/project2.html
+++ b/projects/project2.html
@@ -68,7 +68,17 @@
      - 글 하단의 북마크 버튼을 누르면 북마크를 활성화/비활성화 하는 기능을 구현했습니다.<br/>
      - 이전 기수에서 구현해놓은 데이터베이스에서 연관관계가 잘못된 부분이 있어 데이터베이스에 직접 접속해<br/>
       &nbsp;&nbsp;해당 관계를 지우고 올바른 관계를 적용시켰습니다.<br/>
-     - 북마크 목록을 무한 스크롤로 볼 수 있고 슬라이드 하여 삭제하는 기능을 구현하였습니다.<br/>
+     - 북마크 목록을 무한 스크롤로 볼 수 있고 슬라이드 하여 삭제하는 기능을 구현하였습니다.
+		`)   
+    +inputData('앱스토어 등록',
+		`
+     - 한번의 리젝트를 받으며 앱 등록을 위해 필수적인 항목이 무엇인지 잘 알게 되었습니다.<br/>
+     - 실제로 앱 스토어에 올라간 세이버 안드로이드 앱을 보며 아쉬움과 보람을 느꼈습니다.
+		`)
+    +inputData('협업',
+		`
+     - 씨네룩스측과 깃허브 이슈란을 통해 소통하며 요구사항을 맞춰나가는 즐거움을 느낄 수 있었습니다.<br/>
+     - 두명의 안드로이드 개발자, 세명의 ios 개발자와 논의하고 배우며 효율적으로 일할 수 있었습니다.
 		`)
 
 	);
