--- a/projects/project1.html
+++ b/projects/project1.html
@@ -33,7 +33,7 @@
           <img class="icon" src="../images/icon/github.png"/> 
 		</div>
         <div class="text-b2" style="margin-top: 0.5rem">
-          온전히 내 손으로 만든 Gifty 백엔드
+          처음부터 끝까지 내 손으로 만든 Gifty 백엔드
 		  <br />
         </div>
         <div class="text-r3 gray">
@@ -42,7 +42,6 @@
 				https://github.com/42seoul-gifty/backend-hokim
 			</a>
         </div>
-
         <div class="small-text-box"></div>
     </div>
   </body>
@@ -53,10 +52,34 @@
   <script>
 	container.insertAdjacentHTML(
 	"beforeend",
-		inputData('.',
+		inputData('데이터베이스 설계',
 		`
-		.
+      - 현재 동작중인 어플리케이션과 예시 프로젝트를 보며 효율성을 고려해 새롭게 데이터베이스를 설계했습니다.<br/>
+      - 하나의 주문이 여러 리시버를 가질 수 있도록 고려하였습니다.
 		` )
+    + inputData('API 명세',
+    `
+      - 프로젝트의 뼈대를 세우기 위해 프론트엔드, 백엔드 담당자들과 함께 API를 설계했습니다.<br/>
+      - API 주소와 요청/응답 형식을 정의하였습니다.<br/>
+      - 프론트엔드 담당자가 백엔드의 동작 방식을 확인할 수 있도록 swagger로 문서화하여 제공하였습니다.<br/>
+    ` )
+    + inputData('Oauth',
+    `
+      - 카카오와 네이버를 통해 사용자를 인증하고 서버에서 자체 토큰을 발급해주는 Oauth 로그인을 구현하였습니다.<br/>
+      - 사용자 인증이 필요한 API의 경우 서버를 통해 발급받은 코드를 헤더로 넘겨주어야 접근할 수 있게 설계하였습니다.<br/>
+    ` )
+    + inputData('필요한 시스템 구현',
+    `
+      - 아임포트를 통해 결제 시스템을 구현하였습니다.<br/>
+      - winston 서버 내부에서 로그를 찍고, morgan으로 요청과 응답도 로그에 찍히도록 하였습니다.<br/>
+      - API가 많아지면서 코드 수정시 사이드이펙트를 막기 위해 mocha로 테스트를 작성하여 사용했습니다.<br/>
+    ` )
+    + inputData('프론트엔드 개발자와의 협업',
+    `
+      - 프론트엔드 개발자가 제 도메인을 사용하는 과정을 함께 경험했습니다.<br/>
+      - cors 설정으로 프론트엔드 개발자가 테스트할 도메인을 추가하였습니다.<br/>
+      - 코드 업데이트시 소통의 중요성을 다시 한 번 깨달았습니다.
+    ` )
 	);
   </script>
 </html>
