--- a/projects/project1.html
+++ b/projects/project1.html
@@ -32,7 +32,7 @@
           <img class="icon" src="../images/icon/ejs.png"/> 
           <img class="icon" src="../images/icon/github.png"/> 
 		</div>
-        <div class="text-b2" style="margin-top: 0.5rem">
+        <div class="text-b2" style="margin: 0.5rem 0">
           처음부터 끝까지 내 손으로 만든 Gifty 백엔드
 		  <br />
         </div>
