--- a/projects/project2.html
+++ b/projects/project2.html
@@ -32,7 +32,7 @@
           <img class="icon" src="../images/icon/ejs.png"/> 
           <img class="icon" src="../images/icon/github.png"/> 
 		</div>
-        <div class="text-b2" style="margin-top: 0.5rem">
+        <div class="text-b2" style="margin: 0.5rem 0">
          웹과 앱, 프론트엔드와 백엔드 한번에 맛보기
 		  <br />
         </div>
@@ -40,6 +40,12 @@
           깃허브:
           <a href="https://github.com/innovationacademy-kr/slabs-saver">
             https://github.com/innovationacademy-kr/slabs-saver
+            </a>
+        </div>
+        <div class="text-r3 gray">
+          앱 다운로드 링크:
+          <a href="https://play.google.com/store/apps/details?id=com.seoul42.saver_android">
+            https://play.google.com/store/apps/details?id=com.seoul42.saver_android
             </a>
         </div>
 
