--- a/projects/project3.html
+++ b/projects/project3.html
@@ -30,7 +30,7 @@
           <img class="icon" src="../images/icon/mongoose.png"/>
           <img class="icon" src="../images/icon/github.png"/>
         </div>
-        <div class="text-b2" style="margin-top: 0.5rem">
+        <div class="text-b2" style="margin: 0.5rem 0">
           첫 웹개발 프로젝트<br />
         </div>
         <div class="text-r3 gray">
@@ -39,6 +39,14 @@
             https://github.com/Matching42/Matching42-back
             </a>
         </div>
+        <div class="text-r3 gray">
+          웹사이트:
+          <a href="https://matching42.com/">
+            https://matching42.com/
+            </a>
+        </div>
+
+        
 
         <div class="small-text-box"></div>
     </div>
