--- a/index.html
+++ b/index.html
@@ -17,18 +17,13 @@
     />
   </head>
   <body>
-    <div id="head">
-      <div id="title">hokim</div>
-      <div id="title-link">
-        <a class="link-item selected" href="./main.html">소개</a>
-        <a class="link-item" href="./portfolio.html">포트폴리오</a>
-        <a class="link-item" href="./career.html">경력</a>
-      </div>
-    </div>
     <ul id="menu"></ul>
-
     <div id="fullpage"></div>
   </body>
+  <script src="./header.js"></script>
+  <script>
+    addHeader(1);
+  </script>
   <script src="./mainPages/page_1.js"></script>
   <script src="./mainPages/page_2.js"></script>
   <script src="./mainPages/page_3.js"></script>
