--- a/portfolio.html
+++ b/portfolio.html
@@ -13,14 +13,6 @@
     <title>hokim's resume</title>
   </head>
   <body>
-    <div id="head">
-      <div id="title">hokim</div>
-      <div id="title-link">
-        <a class="link-item" href="./index.html">소개</a>
-        <a class="link-item selected" href="./portfolio.html">포트폴리오</a>
-        <a class="link-item" href="./career.html">경력</a>
-      </div>
-    </div>
     <div class="body back">
       <div class="view">
         <div id="content" class="content"></div>
@@ -28,6 +20,10 @@
       <div class="navigation"></div>
     </div>
   </body>
+  <script src="./header.js"></script>
+  <script>
+    addHeader(2);
+  </script>
   <script src="./portfolioPages/index.js"></script>
   <script src="./portfolioPages/page_1.js"></script>
   <script src="./portfolioPages/page_2.js"></script>
