--- a/projects/project3.html
+++ b/projects/project3.html
@@ -13,14 +13,6 @@
     <title>hokim's resume</title>
   </head>
   <body>
-    <div id="head">
-      <div id="title">hokim</div>
-      <div id="title-link">
-        <a class="link-item" href="../index.html">소개</a>
-        <a class="link-item selected" href="../portfolio.html">포트폴리오</a>
-        <a class="link-item" href="../career.html">경력</a>
-      </div>
-    </div>
 
     <div class="full back-3 back">
       <div class="inner-pull">
@@ -53,6 +45,10 @@
   </body>
 
 
+  <script src="../header.js"></script>
+  <script>
+    addHeader(2,".");
+  </script>
   <script src="./inputData.js">
   </script>
   <script>
