--- a/career.html
+++ b/career.html
@@ -20,7 +20,10 @@
         <div class="text-b2" style="margin: 0.5rem 0">
           차차 늘려나갈 예정입니다 :)<br />
         </div>
-        <div class="scroll-box"></div>
+        <div class="container"></div>
+        <br />
+        <br />
+        <br />
       </div>
     </div>
   </body>
@@ -44,7 +47,7 @@
     `;
     };
 
-    const container = document.getElementsByClassName("scroll-box")[0];
+    const container = document.getElementsByClassName("container")[0];
     container.insertAdjacentHTML(
       "beforeend",
       inputData(
